--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "author": "karl Jurvanen <karl.jurvanen@eng.tamk.fi>",
   "license": "MIT",
   "scripts": {
-    "dev": "babel-node src/index.js"
+    "dev": "nodemon src/index.js -w src --exec babel-node"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.18.5"
   }
 }
