Integrate MySQL in Docker dev env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   backend:
     build:
@@ -18,4 +18,17 @@ services:
       - "9005:9005"
     volumes:
       - ./backend:/opt/app
+    restart: always
+  db:
+    image: mysql:8.0.3
+    volumes:
+      - /var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: db_rootpass
+      MYSQL_DATABASE: db_1
+    restart: always
+  mywebsql:
+    image: quantumobject/docker-mywebsql
+    ports:
+      - "9001:80"
     restart: always
