--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "koa": "^2.6.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mysql2": "^1.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
