--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,7 @@ services:
       - "9000:9000"
     environment:
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      JWT_SECRET: "${JWT_SECRET}"
     restart: always
   db:
     image: mysql:8.0.3
