try adding bcrypt again

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^3.0.2",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.1",
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
-    "mysql2": "^1.6.1"
+    "mysql2": "^1.6.1",
+    "node-gyp": "^3.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
