--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./backend:/opt/app
     environment:
       MYSQL_ROOT_PASSWORD: db_rootpass
-      JWT_SECRET: devsecret
+      JWT_SECRET: $JWT_SECRET      
     restart: always
   backend_test:
     build:
@@ -23,7 +23,7 @@ services:
       - ./backend:/opt/app
     environment:
       MYSQL_ROOT_PASSWORD: db_rootpass
-      JWT_SECRET: devsecret
+      JWT_SECRET: $JWT_SECRET
     restart: always
   db:
     image: mysql:8.0.3
